		      display job federation information.
In slurm_msg_t: Added buffer to keep received message buffer to use for later
	purposes.
In slurmctld_lock_t: Added federation
In slurmdb_cluster_cond_t: Added List federation_list
In slurmdb_cluster_rec_t: Added fed, lock, sockfd
In will_run_response_msg_t: Added double sys_usage_per to report back how busy a
	cluster is.

Added the following struct definitions
======================================
Added slurmdb_cluster_fed_t to store federation information on
	slurmdb_cluster_rec_t.
Added slurmdb_federation_cond_t for selecting federations from db.
Added slurmdb_federation_rec_t to represent federation objects.
Added job_fed_details_t for storing federated job information.
Added sib_msg_t for sending messages to siblings.
Added slurm_step_layout_req_t to improve slurmctld control over task layout
Added the following fields to struct slurm_step_launch_params_t:
packstepid.
Added the following fields to struct slurm_job_info_t:
pack_leader.
Added the following fields to struct kill_job_msg_t:
pelog_env, pelog_env_size.
Added the following fields to struct job_desc_msg_t:
pelog_env, pelog_env_size, group_number, numpack, resv_port.
Added the following fields to struct launch_tasks_request_msg_t:
pelog_env, pelog_env_size.
Added the following fields to struct prolog_launch_msg_t:
pelog_env, pelog_env_size.
Added the following fields to struct job_desc_msg_t:
pack_leader.
Added the following fields to struct slurmdb_job_rec_t:
packid.
Added the following fields to struct slurmdb_step_rec_t:
packstepid.
Added the following fields to struct dbd_job_start_msg_t:
pack_leader.
Added the following fields to struct dbd_step_comp_msg_t:
packstepid.
Added the following fields to struct dbd_step_start_msg_t:
packstepid.
Added the following fields to struct _job_table_fields:
packid.
Added the following fields to struct step_table_fields:
packjobid, packstepid.
Added the following fields to struct job_step_create_request_msg_t: