@@ -602,12 +602,12 @@ extern int launch_p_step_launch(
 	launch_params.cpu_freq_max      = opt.cpu_freq_max;
 	launch_params.cpu_freq_gov      = opt.cpu_freq_gov;
 	launch_params.task_dist         = opt.distribution;
-	launch_params.mpi_jobid         = opt.mpi_jobid;
-	launch_params.mpi_stepid        = opt.mpi_stepid;
-	launch_params.mpi_ntasks        = opt.mpi_ntasks;
-	launch_params.mpi_nnodes        = opt.mpi_nnodes;
-	launch_params.mpi_stepfnodeid   = opt.mpi_stepfnodeid;
-	launch_params.mpi_stepftaskid   = opt.mpi_stepftaskid;
+	launch_params.mpi_jobid         = job->mpi_jobid;
+	launch_params.mpi_stepid        = job->mpi_stepid;
+	launch_params.mpi_ntasks        = job->mpi_ntasks;
+	launch_params.mpi_nnodes        = job->mpi_nnodes;
+	launch_params.mpi_stepfnodeid   = job->mpi_stepfnodeid;
+	launch_params.mpi_stepftaskid   = job->mpi_stepftaskid;
 	launch_params.ckpt_dir		= opt.ckpt_dir;
 	launch_params.restart_dir       = opt.restart_dir;
 	launch_params.preserve_env      = opt.preserve_env;
